--- a/src/vue-components/search/search.mat.styl
+++ b/src/vue-components/search/search.mat.styl
@@ -16,7 +16,7 @@
   left 10px
   pointer-events none
 .quasar-search-clear
-  right 13px
+  right 15px
 
 .quasar-search-input
   padding 0 45px
